12, Buttons: Empty spaces not filling the rollover state - had to remove the previous hover for something more simple

--- a/public/css/kabinett-config.less
+++ b/public/css/kabinett-config.less
@@ -73,12 +73,9 @@
   border-color: @border-color;
   color: @text-color;
 
-  &::before {
-    background-color: @border-color;
-  }
-
   &:hover:not(.disable) {
     color: @hover-color;
+    background-color: @border-color;
   }
 }
 
@@ -87,26 +84,10 @@
   border-width: 1px;
   white-space: nowrap;
   overflow: hidden;
-  transition: color 60ms linear, opacity 400ms;
-
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: translate3d(0,100%,0);
-    transform: translate(0,100%);
-    transition: transform 160ms ease;
-  }
+  transition: color 120ms ease, opacity 400ms, background-color 120ms ease;
 
   &:active {top: 1px}
   &.disable {opacity: .2}
-  &:hover:not(.disable)::before {
-    transform: translate3d(0,0,0);
-    transform: translate(0,0);
-  }
 
   &.-md,
   &.-lg {border-width: 2px}
