--- a/public/css/pages/case-studies.less
+++ b/public/css/pages/case-studies.less
@@ -9,11 +9,18 @@
 }
 
 .case-studies__proyect {
+  overflow: hidden;
   padding: 8rem;
   border-bottom: 1px solid white;
   background-color: #232323;
 
   &:last-child {border-bottom: none}
+
+  &:hover {
+    .case-studies__proyect-bg {
+      transform: scale(1.1);
+    }
+  }
 }
 
 .case-studies__proyect:nth-child(odd) {
@@ -25,6 +32,9 @@
   left: 0;
   right: 0;
   bottom: 0;
+  transform: scale(1);
+  transition: transform 400ms ease;
+  will-change: transform;
 
   &::after {
     background-color: #293033;
