--- a/public/css/pages/about-us.less
+++ b/public/css/pages/about-us.less
@@ -136,7 +136,6 @@
   height: 43.333em;
   padding-top: 0;
   padding-bottom: 0;
-  transform: translate3d(0, 0, 0);
 }
 
 .about-us__gallery-item {
@@ -144,14 +143,12 @@
   left: 0;
   right: 0;
   visibility: hidden;
-  transform: translateX(6rem);
-  transform: translate3d(6rem,0,0);
-  transition: transform 400ms @ease;
-  will-change: transform;
+  opacity: 0;
+  transition: opacity 150ms linear;
+  will-change: opacity;
 
   &.active {
-    transform: translateX(0);
-    transform: translate3d(0,0,0);
+    opacity: 1;
     visibility: visible;
   }
 }
