Forms styles added

--- a/public/css/pages/project-planner.less
+++ b/public/css/pages/project-planner.less
@@ -1,4 +1,4 @@
-.project-planner {
+.forms {
   z-index: 4;
   top: 0;
   left: 0;
@@ -10,7 +10,7 @@
   &.active {transform: translateX(0)}
 }
 
-.project-planner__close {
+.forms__close {
   z-index: 1;
   top: 6rem;
   right: 6rem;
@@ -20,11 +20,11 @@
   &:hover {opacity: .6}
 }
 
-.project-planner__inner {
+.forms__inner {
   height: 100%;
 }
 
-.project-planner__step {
+.forms__step {
   position: absolute;
   top: 0;
   left: 0;
