--- a/public/css/ui/pages.less
+++ b/public/css/ui/pages.less
@@ -29,16 +29,12 @@
   right: 0;
   bottom: 0;
   overflow-y: auto;
-  transform: translateZ(0);
-
-  .gm-scroll-view {
-    transform: translateZ(0);
-  }
 
   .gm-scrollbar.-vertical {
-    top: 4px;
-    right: 4px;
-    bottom: 4px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 0;
   }
 }
 
@@ -54,11 +50,6 @@
 }
 
 .page__header-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   opacity: .2;
 }
 
