10, Tweak: What we do: Make animation change when both items are aligned

--- a/public/css/pages/what-we-do.less
+++ b/public/css/pages/what-we-do.less
@@ -6,6 +6,17 @@
   .work-with-us .work-with-us__title::after {
     background-color: @accent-pink;
   }
+
+  [data-hitnor],
+  [data-hitfix],
+  [data-hitabs] {
+    z-index: 1;
+    position: absolute;
+    width: 1px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+  }
 }
 
 .what-we-do__disciplines-wrapper,
