48, Project Planner: Step 2: Add Default Message

--- a/public/css/pages/project-planner.less
+++ b/public/css/pages/project-planner.less
@@ -169,6 +169,10 @@
   border-radius: 5px;
 }
 
+.pp-upload-files-limit-message {
+  color: #7E888C;
+}
+
 .project-planner__project-description {
   font-size: 1.5rem;
   resize: none;
