47, Project Planner: Step 2: Attachments: Add Error Message

--- a/public/css/kabinett-config.less
+++ b/public/css/kabinett-config.less
@@ -64,6 +64,7 @@
 .mixin-color(@accent-green, green);
 .mixin-color(@accent-purple, purple);
 .mixin-color(@accent-pink, pink);
+.mixin-color(@accent-red, red);
 
 /* =========================================================================== *
   overrides :: button
