--- a/public/css/style.less
+++ b/public/css/style.less
@@ -22,6 +22,7 @@
 @import './ui/gradients';
 @import './ui/social';
 @import './ui/slider';
+@import './ui/attach-file';
 @import './ui/menu';
 @import './ui/grid';
 @import './ui/pages';
