50, Project Planner: Step 5: Submit: Add a spinner before switching to the "Thank you" screen

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -11,6 +11,11 @@
 .gm-autoshow .gm-scrollbar {will-change: opacity}
 
 /* =========================================================================== *
+ *  vendor :: spinkit
+ * =========================================================================== */
+@import (inline) './../../node_modules/spinkit/css/spinners/5-pulse.css';
+
+/* =========================================================================== *
  *  lib :: kabinett
  * =========================================================================== */
 @import 'kabinett-config';
@@ -21,6 +26,7 @@
 
 @import './ui/gradients';
 @import './ui/social';
+@import './ui/spinner-blocker';
 @import './ui/slider';
 @import './ui/attach-file';
 @import './ui/menu';
