fix / what we do, disciplines circle should be hidden for touch devices (we do not interact with the scroll event, so the circle will never get shown/hidden programatically)

--- a/public/css/ui/what-we-do-circle.less
+++ b/public/css/ui/what-we-do-circle.less
@@ -3,6 +3,10 @@
   width: 520px;
   height: 520px;
   // transition: opacity 100ms linear, transform 200ms ease;
+
+  .touch & {
+    display: none;
+  }
 }
 
 .wwd__inner-circle-label {
