--- a/public/css/pages/what-we-do.less
+++ b/public/css/pages/what-we-do.less
@@ -100,17 +100,22 @@
     display: none;
   }
 
+  .what-we-do__disciplines-row {
+    padding: 0 0 5rem;
+  }
+
   .what-we-do__discipline-inner {
     padding: 0;
   }
 
   .what-we-do__discipline-inner-center {
     position: initial;
+    transform: initial;
+    padding: 0;
   }
 
   .what-we-do__discipline {
     width: 100%;
-    padding: 0;
   }
 }
 
