Added fix to the attach feedback message and removed the extra BR tag in general application

--- a/public/css/pages/general-application.less
+++ b/public/css/pages/general-application.less
@@ -14,7 +14,12 @@ p.general-application__commas{
 	margin-bottom:10px;
 	color: #A0ACB3;
 }
-
+p.general-application__uploadFilesFeedback{
+	font-size: 1.083rem;
+    overflow: hidden;
+    color: #525F66;
+    margin-top: 7px;
+}
 @media all and (max-width: 768px) {
   .general-application__step {
     padding-left: 2rem;
