add / overlay widget - make project planner and generic-application to be subclasses

--- a/public/css/lib/kabinett/source/less/utilities/layout.less
+++ b/public/css/lib/kabinett/source/less/utilities/layout.less
@@ -41,7 +41,8 @@
 @{-}s {.createiconsizes();}
 
 @{-}bw0 {border-width: 0}
-@{-}overflow-hidden {overflow: hidden}
+@{-}oh {overflow: hidden}
+@{-}oa {overflow: auto}
 @{-}nw {white-space: nowrap}
 
 @{-}ellipsis {
