--- a/public/css/style.less
+++ b/public/css/style.less
@@ -27,6 +27,7 @@
 @import './ui/gradients';
 @import './ui/social';
 @import './ui/spinner-blocker';
+@import './ui/overlays';
 @import './ui/slider';
 @import './ui/attach-file';
 @import './ui/menu';
