--- a/public/css/ui/attach-file.less
+++ b/public/css/ui/attach-file.less
@@ -6,13 +6,15 @@
   font-weight: bold;
 }
 
+.ui-attach-file-text {
+  padding-right: 30px;
+}
+
 .attach-file-name {
-  display: inline-block;
   margin: 0 5px 0 0;
 }
 
 .attach-file-size {
-  display: inline-block;
   color: #777;
 }
 
