--- a/public/css/pages/project-planner.less
+++ b/public/css/pages/project-planner.less
@@ -1,66 +1,3 @@
-.forms {
-  z-index: 4;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: translateX(100%);
-  transition: transform 400ms @ease;
-
-  &.active {transform: translateX(0)}
-}
-
-.forms__close {
-  z-index: 1;
-  top: 6rem;
-  right: 6rem;
-  fill: #7E888C;
-  transition: opacity 200ms linear;
-
-  &:hover {opacity: .6}
-}
-
-.forms__inner {
-  height: 100%;
-}
-
-.forms__step {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 6rem 6rem 12rem 6rem;
-  overflow: auto;
-  visibility:hidden;
-  opacity: 0;
-  // transform: translatex(2em);
-  transition: opacity .3s, transform .3s;
-
-  > .page__container {
-    padding: 0 7rem;
-  }
-
-  &.active {
-    opacity: 1;
-    visibility: visible;
-    // transform: translatex(0);
-  }
-}
-
-.project-planner__footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 1.3334rem 6rem;
-  background-color: #F5F8FA;
-
-  > .page__container {
-    padding: 0 7rem;
-  }
-}
-
 .project-planner__step-counter {
   font-size: 1.333rem;
   line-height: 3.5em;
@@ -75,17 +12,13 @@
   color: @color-white;
 }
 
-.project-planner__title {
-  font-size: 4rem;
-  line-height: 1.208em;
-  margin-bottom: 2rem;
+@media all and (max-width: 768px) {
+  .project-planner__step-counter {
+    position: relative;
+    display: inline-block;
+    margin: 0 0 3rem;
+  }
 }
-
-.project-planner__desc {
-  font-size: 1.25rem;
-  color: #7E888C;
-}
-
 
 /******************************************************************************
  * Step 1
