--- a/public/css/ui/overlays.less
+++ b/public/css/ui/overlays.less
@@ -69,6 +69,10 @@
   background-color: #F5F8FA;
 }
 
+.overlay-form-subtitle {
+  font-size: 1.5rem;
+  color: @color-neutral-dark;
+}
 
 @media all and (max-width: 768px) {
   .overlay__close {
