fix / what we do, non-animated offerings icons (touch devices)

--- a/public/css/pages/what-we-do.less
+++ b/public/css/pages/what-we-do.less
@@ -67,12 +67,10 @@
 
 .what-we-do__offering-icon {
   > svg {
-    // display: none;
     width: 50%;
+    height: 50%;
   }
 }
-
-// .touch .what-we-do__offering-icon > svg {display: initial}
 
 .what-we-do__offerings-row {
   padding: 8em 0;
