fix / about us, active thumb indicator (ipad issue with vw units)

--- a/public/css/pages/about-us.less
+++ b/public/css/pages/about-us.less
@@ -196,8 +196,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
   width: 14.28571429vw;
+  height: 14.28571429vw;
   transform: translate(0,0);
   transition: transform 200ms @ease;
   will-change: transform;
