fix / about us, testimonial quote, svg size - seems that some old versions of iOS requires the explicit size on svg   elements to render them correctly

--- a/public/css/ui/pages.less
+++ b/public/css/ui/pages.less
@@ -166,7 +166,8 @@
 }
 
 .testimonial-quote {
-  width: 14.583rem;
+  width: 14rem;
+  height: 14rem;
   top: 4rem;
   left: -3rem;
   fill: #333C40;
