Removed Chupao and temporaly centered the team images

--- a/public/css/pages/about-us.less
+++ b/public/css/pages/about-us.less
@@ -188,6 +188,7 @@
 .about-us__team-gallery-quote {}
 
 .about-us__team-gallery-thumbs-wrapper {
+  text-align: center; // Temporal centering of the members of the team
 }
 
 .gallery__thumbs-label {color: #C1C1C1}
