Aligned elements and fixed paddings

--- a/public/css/pages/about-us.less
+++ b/public/css/pages/about-us.less
@@ -108,8 +108,12 @@
 
 .principle__a {
   min-height: 22rem;
+  padding-top: 21px;
 }
 
+.principle__b{
+  padding-top: 26px;
+}
 .principle__title {
   font-size: 2rem;
   line-height: 1.083em;
