--- a/public/css/ui/what-we-do-circle.less
+++ b/public/css/ui/what-we-do-circle.less
@@ -24,11 +24,17 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  .wwd__discipline-label{
+    letter-spacing: 3px;
+    color: #A1ADB3;
+  }
 }
 
 .wwd__list {
   font-size: 1.35rem;
   list-style: none;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .wwd__list-item {
