Changed paddings for the pages intro

--- a/public/css/pages/about-us.less
+++ b/public/css/pages/about-us.less
@@ -1,5 +1,13 @@
+.page-about-us {
+  .page__intro {
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+  }
+}
+
 .about-us__pillars-text {
-  padding-bottom: 15rem;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 .about-us__pillars {
   padding-top: 0;
