--- a/public/css/pages/case-studies.less
+++ b/public/css/pages/case-studies.less
@@ -1,6 +1,7 @@
 .page-case-studies {
   .page__body {
     padding: 3.33rem;
+    padding-top: 10rem;
   }
 
   .work-with-us .work-with-us__title::after {
