--- a/public/css/pages/what-we-do.less
+++ b/public/css/pages/what-we-do.less
@@ -7,6 +7,10 @@
     background-color: @accent-pink;
   }
 
+  .page__intro {
+    padding-top: 10rem;
+  }
+
   [data-hitnor],
   [data-hitfix],
   [data-hitabs] {
