Added cuiki's post to journal and replaced the medium logo for the new one

--- a/public/css/ui/social.less
+++ b/public/css/ui/social.less
@@ -16,6 +16,18 @@
 
 .-social-hover-medium:hover {
   fill: @color-medium;
+  .medium-part-1{
+    fill:#32FC8D;
+  }
+  .medium-part-2{
+    fill:#0BE370;
+  }
+  .medium-part-3{
+    fill:#14C767;
+  }
+  .medium-part-4{
+    fill:#00AB6C;
+  }
 }
 
 .-social-hover-steam:hover {
@@ -24,4 +36,23 @@
 
 .-social-hover-codepen:hover {
   fill: @color-black;
+}
+
+/*
+ * Medium SVG new icon path fills
+ */
+.medium-new-icon-svg{
+  transition: all 250ms ease;
+}
+.medium-part-1{
+  fill:#d1d2d3;
+}
+.medium-part-2{
+  fill:#a6a8ac;
+}
+.medium-part-3{
+  fill:#808184;
+}
+.medium-part-4{
+  fill:#58595c;
 }
