--- a/views/layouts/application.html
+++ b/views/layouts/application.html
@@ -34,7 +34,7 @@
     </defs>
   </svg>
   <%= renderPartial('shared/svg/sprite.svg') %>
-  <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
   <script src="/dist/bundle.js"></script>
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
