--- a/public/css/ui/grid.less
+++ b/public/css/ui/grid.less
@@ -32,7 +32,7 @@
 }
 
 .grid__list {
-  position: relatve;
+  position: relative;
   padding: 0 0 40px;
   transform: translateY(-50%);
   position: relative;
@@ -124,7 +124,7 @@
 
 @media all and(max-width: 730px) {
   .grid__list {
-    padding: 80px 10px 20px;
+    padding: 140px 10px 20px;
     transform: none;
     position: relative;
     top: initial;
