Basic skeleton for grid items on home; WIP

--- a/public/css/pages/home.less
+++ b/public/css/pages/home.less
@@ -1,4 +1,18 @@
-.page-home {}
+.page-home {
+  .em-slide__text {
+    position: relative;
+    color: @color-black;
+
+    padding-top: 37em;
+    padding-left: 6.667em;
+    padding-right: 15em;
+
+    p {
+      margin-top: 1.5em;
+      font-size: 1.87em;
+    }
+  }
+}
 
 .slides__intro {
   > .em-slide__text > .em-slide__subheading {
