--- a/public/css/pages/home.less
+++ b/public/css/pages/home.less
@@ -3,13 +3,37 @@
     position: relative;
     color: @color-black;
 
-    padding-top: 37em;
+    padding-top: 25em;
     padding-left: 6.667em;
     padding-right: 15em;
 
     p {
       margin-top: 1.5em;
       font-size: 1.87em;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+
+      li {
+        width: 46%;
+        padding: 4em 2em;
+        margin-right: 2%;
+        background: #F8F8F8;
+        display: inline-block;
+      }
+
+      a { display: inline-block; border-bottom: 2px solid @color-black; margin: 1em 0; text-transform: uppercase; }
+      h5 { margin: .5em 0; font-size: 1.3em; text-transform: uppercase; }
+      h3 { margin: .5em 0; font-size: 2.4em; }
+    }
+
+    .-featured {
+      font-weight: 700;
+      text-transform: uppercase;
+      margin-top: 5em;
+      margin-bottom: 2.5em;
     }
   }
 }
