--- a/public/css/pages/home.less
+++ b/public/css/pages/home.less
@@ -30,10 +30,15 @@
     }
 
     .-featured {
-      font-weight: 700;
       text-transform: uppercase;
       margin-top: 5em;
       margin-bottom: 2.5em;
+    }
+
+    .em-slide__subheading.-font-semi-bold {
+      font-size: 1.5em;
+      letter-spacing: .1em;
+      text-transform: uppercase;
     }
   }
 }
