Improved responsiveness for new-home; fix

--- a/public/css/ui/menu.less
+++ b/public/css/ui/menu.less
@@ -1,7 +1,7 @@
 .menu {
   z-index: 3;
   height: 40px;
-  top: 40px;
+  top: 20px;
   left: 0;
   width: 100%;
   // fill: @color-neutral-xx-dark;
@@ -25,6 +25,10 @@
   }
 }
 
+.menu__logo {
+  margin-left: 20px;
+}
+
 
 // active
 .menu.active {
@@ -33,8 +37,8 @@
   .menu__svg .b {display: block}
 }
 
-@media all and(max-width: 730px) {
-  .menu {
-    top: 20px;
-  }
-}
+// @media all and(max-width: 730px) {
+//   .menu {
+//     top: 20px;
+//   }
+// }
