--- a/public/css/pages/home.less
+++ b/public/css/pages/home.less
@@ -1,10 +1,7 @@
 .page-home {
   position: relative;
   color: @color-black;
-
-  padding-top: 25em;
-  padding-left: 6.667em;
-  padding-right: 15em;
+  padding: 120px 20px 0 20px;
 
   p {
     margin-top: 1.5em;
@@ -16,9 +13,8 @@
     padding: 0;
 
     li {
-      width: 46%;
+      width: 100%;
       padding: 4em 2em;
-      margin-right: 2%;
       margin-bottom: 2%;
       background: #F8F8F8;
       display: inline-block;
@@ -73,3 +69,17 @@
 //     color: #1BB8BB;
 //   }
 // }
+
+
+@media screen and (min-width: 680px) {
+  .page-home {
+    padding-left: 60px;
+    padding-right: 60px;
+
+    ul li {
+      width: 46%;
+      margin-left: 2%;
+      margin-bottom: 2%;
+    }
+  }
+}
