--- a/public/css/style.less
+++ b/public/css/style.less
@@ -106,3 +106,13 @@ a {
 @media all and (max-width: 500px) {
   :root {font-size: 7px;}
 }
+
+// ----------
+// FEEDBACK
+// ----------
+
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0.5em 0 0.5em;
+  color: inherit;
+}
