--- a/public/css/pages/home.less
+++ b/public/css/pages/home.less
@@ -55,10 +55,21 @@
         right: 2em;
         left: 2em;
       }
+
+      &:before {
+        position: absolute;
+        left: 0;
+        top: 0;
+        content: ' ';
+        background: rgba(0, 0, 0, .68);
+        width: 100%;
+        height: 100%;
+      }
     }
 
     a { font-size: 1.1em; border-bottom: 1px solid @color-white; opacity: .8; }
     h3 { font-size: 1.9em; }
+    h3 a { text-decoration: none; border: 0; }
   }
 
   h1 {
@@ -171,7 +182,7 @@
       background: #000;
       background-repeat: no-repeat;
       background-position: left top;
-      background-size: 100% auto;
+      background-size: 150% auto;
   }
 
 }
