--- a/public/css/pages/home.less
+++ b/public/css/pages/home.less
@@ -30,11 +30,11 @@
     padding: 0;
 
     li {
-      padding: 4em 2em;
+      padding: 10em 2em 4em;
       background: #F8F8F8;
     }
 
-    a { display: inline-block; border-bottom: 2px solid @color-black; margin: 1em 0; text-transform: uppercase; }
+    a { display: inline-block; border-bottom: 2px solid @color-black; margin: 1em 0; text-transform: uppercase; padding-bottom: 5px; }
     h5 { margin: .5em 0; font-size: 1.3em; text-transform: uppercase; }
     h3 { margin: .5em 0; font-size: 2.4em; }
   }
@@ -47,7 +47,7 @@
       background: @color-black;
       background-repeat: no-repeat;
       background-position: left top;
-      background-size: 100% auto;
+      background-size: 150% auto;
 
       .bottom__aligned {
         position: absolute;
@@ -79,7 +79,7 @@
   .featured {
     text-transform: uppercase;
     margin-top: 5em;
-    margin-bottom: 2.5em;
+    margin-bottom: 1.5em;
   }
 
   .subheading {
@@ -109,28 +109,35 @@
   }
 }
 
-// .slides__cv-by {
-//   > .em-slide__bg {opacity: .3}
-
-//   > .em-slide__text > .ui-btn:hover {
-//     color: #1BB8BB;
-//   }
-// }
-
-
 @media screen and (min-width: 680px) {
   .page-home {
     padding-left: 80px;
     padding-right: 80px;
 
     .featured__list li {
-      width: 46%;
-      margin-left: 2%;
+      width: 49%;
+      margin-right: 1%;
+
+      &:nth-child(n+2) {
+        margin-right: 0;
+        margin-left: 1%;
+        width: 49%;
+      }
     }
 
     .journal__list li {
-      width: 30%;
-      margin-left: 2%;
+      width: 32%;
+      margin-right: 1%;
+      height: 330px;
+
+      &:nth-child(2), &:nth-child(5) {
+        margin-left: 1%;
+      }
+
+      &:nth-child(3), &:nth-child(6) {
+        margin-left: 1%;
+        margin-right: 0;
+      }
     }
   }
 }
@@ -140,49 +147,4 @@
     max-width: 1440px;
     margin: 0 auto;
   }
-}
-
-
-// Fixes
-
-@media screen and (min-width: 680px) {
-  .page-home .featured__list li {
-      width: 46%;
-      margin-right: 2%;
-  }
-  .page-home .featured__list li {
-      padding: 10em 2em 4em;
-      background: #F8F8F8;
-  }
-  .page-home .featured {
-      text-transform: uppercase;
-      margin-top: 5em;
-      margin-bottom: 1.5em;
-  }
-  .page-home .featured__list a {
-      display: inline-block;
-      border-bottom: 2px solid #000;
-      margin: 1em 0;
-      text-transform: uppercase;
-      font-family: 'Graphik-Bold';
-      padding-bottom: 5px;
-  }
-}
-/* Journal */
-@media screen and (min-width: 680px) {
-  .page-home .journal__list li {
-      width: 29%;
-      margin-right: 2%;
-  }
-
-  .page-home .journal__list li {
-      position: relative;
-      height: 330px;
-      color: #fff;
-      background: #000;
-      background-repeat: no-repeat;
-      background-position: left top;
-      background-size: 150% auto;
-  }
-
 }
