Remove active color from menu; fix

--- a/public/css/ui/menu.less
+++ b/public/css/ui/menu.less
@@ -32,7 +32,7 @@
 
 // active
 .menu.active {
-  .menu__svg {fill: @color-neutral-xx-dark;}
+  // .menu__svg {fill: @color-neutral-xx-dark;}
   .menu__svg .a {display: none}
   .menu__svg .b {display: block}
 }
