--- a/public/css/pages/home.less
+++ b/public/css/pages/home.less
@@ -1,4 +1,4 @@
-.page-home {
+.page-home .page__container {
   h1 {
     font-size: 5.0em;
     line-height: 1.3em;
@@ -86,7 +86,7 @@
 }
 
 @media screen and (min-width: 680px) {
-  .page-home {
+  .page-home .page__container {
     .featured__list li {
       width: 49%;
       margin-right: 1%;
