--- a/public/css/pages/home.less
+++ b/public/css/pages/home.less
@@ -1,3 +1,8 @@
+.page-home {
+  .page__header-heading { margin-bottom: .3em; }
+  .page__header-copy { font-size: 2.5rem; }
+}
+
 .page-home .page__container {
   h1 {
     font-size: 5.0em;
